force-app/main/default/objects/Demo_Run_Integration_Procedure__e/Demo_Run_Integration_Procedure__e.object-meta.xml
<CustomObject>
    <description>Event to trigger asynchronous execution of an Integration Procedure</description>
    <label>Demo - Run Integration Procedure</label>
    <pluralLabel>Demo - Run Integration Procedures</pluralLabel>
</CustomObject>