force-app/main/default/objects/Demo_Run_Integration_Procedure__e/fields/correlationId__c.field-meta.xml
<CustomField>
    <fullName>correlationId__c</fullName>
    <description>A correlation Id if the client needs to monitor ant match a response asynchronously</description>
    <label>correlationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>