force-app/main/default/objects/Demo_Run_Integration_Procedure__e/fields/input1__c.field-meta.xml
<CustomField>
    <fullName>input1__c</fullName>
    <label>input1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>