force-app/main/default/objects/Demo_Run_Integration_Procedure__e/fields/input2__c.field-meta.xml
<CustomField>
    <fullName>input2__c</fullName>
    <label>input2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>