force-app/main/default/objects/Demo_Run_Integration_Procedure__e/fields/ipkey__c.field-meta.xml
<CustomField>
    <fullName>ipkey__c</fullName>
    <description>The key (Type_SubType) of the Integration Procedure to execute</description>
    <label>ipkey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>